# ros2_closed_loop_ws

./: .gitignore  .gitmodules  README.md
src/closed_loop_bringup/: CMakeLists.txt  package.xml
src/closed_loop_bringup/launch/: 3dof_delta.launch.py  4dof_delta.launch.py  delta_3dof_moveit.launch.py  delta_4dof_moveit.launch.py  fivebar_linkage.launch.py  fivebar_moveit.launch.py
src/closed_loop_bringup/scripts/: description_publisher.py  transformer_with_preview.py
src/closed_loop_description/: CMakeLists.txt  package.xml
src/closed_loop_description/config/: delta_3dof_controllers.yaml  delta_3dof_gui.config  delta_4dof_controllers.yaml  delta_4dof_gui.config  fivebar_controllers.yaml  fivebar_gui.config
src/closed_loop_description/meshes/A_00036/: Flansch.stl  Kopfplatte.stl  Teleskopwelle_oben.stl
src/closed_loop_description/meshes/PARA_ENGINEER/: Oberarm.stl  Unterarm.stl  Werkzeugtraeger.stl
src/closed_loop_description/urdf/: 3dof_delta.constraints.xacro  3dof_delta.gazebo.xacro  3dof_delta.ros2_control.xacro  3dof_delta.urdf  3dof_delta.urdf.xacro  4dof_delta.constraints.xacro  4dof_delta.gazebo.xacro  4dof_delta.ros2_control.xacro  4dof_delta.urdf  4dof_delta.urdf.xacro  fivebar_linkage.constraints.xacro  fivebar_linkage.gazebo.xacro  fivebar_linkage.moveit.xacro  fivebar_linkage.ros2_control.xacro  fivebar_linkage.urdf  fivebar_linkage.urdf.xacro
src/closed_loop_description/worlds/: delta_world.sdf
src/closed_loop_moveit_config/: CMakeLists.txt  package.xml
src/closed_loop_moveit_config/config/: delta_3dof.rviz  delta_3dof.srdf  delta_3dof_joint_limits.yaml  delta_3dof_moveit_controllers.yaml  delta_4dof.rviz  delta_4dof.srdf  delta_4dof_joint_limits.yaml  delta_4dof_moveit_controllers.yaml  fivebar_linkage.rviz  fivebar_linkage_joint_limits.yaml  moveit.rviz
src/delta_arms_description/: CMakeLists.txt  package.xml
src/delta_arms_description/install/: local_setup.sh  setup.sh
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/cmake/: delta_arms_descriptionConfig.cmake
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/launch/: launch_delta_3dof.launch.py  launch_volcaniarm.launch.py
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/meshes/A_00036/: Oberarm.stl  Unterarmverbinder.stl  Werkzeugtraeger.stl
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/meshes/PARA_ENGINEER/: Kopfplatte.stl
src/delta_arms_description/install/delta_arms_description/share/delta_arms_description/worlds/: volcaniarm_world.sdf
src/delta_arms_description/launch/: 3dof_delta.launch.py  4dof_delta.launch.py  fivebar_linkage.launch.py  launch_delta_4dof.launch.py
src/delta_arms_description/log/: latest_build
src/delta_arms_description/meshes/A_00036/: Teleskopwelle_unten.stl  Unterarm.stl
src/delta_arms_description/scripts/: gen_delta_3dof.py  gen_delta_4dof.py
src/delta_arms_description/urdf/: 3dof_delta.urdf  4dof_delta.urdf  delta_3dof.urdf  delta_4dof.urdf  fivebar_linkage.urdf  volcaniarm.urdf
src/delta_arms_description/worlds/: delta_world.sdf  fivebar_world.sdf
src/fivebar_moveit_config/: CMakeLists.txt  package.xml
src/fivebar_moveit_config/config/: fivebar_linkage.srdf  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
src/volcaniarm_description/: CMakeLists.txt  package.xml
src/volcaniarm_description/launch/: launch_volcaniarm.launch.py
src/volcaniarm_description/urdf/: volcaniarm.urdf
src/volcaniarm_description/worlds/: volcaniarm_world.sdf
