<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>closed_loop_description</name>
  <version>0.0.0</version>
  <description>URDF/Xacro descriptions, Gazebo worlds and meshes for the closed-loop example robots (5-bar linkage, 3-DoF and 4-DoF deltas)</description>
  <maintainer email="tamirlvn@gmail.com">tamir</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
